[metadata]
Name = Bike_Sharing
version = 0.1.dev0
author = Vanesa Lopez
author-email = vanessa.lopezz@student.ie.edu
home-page = https://github.com/vane1993/{individual_project}
description = {Rewrite the Bike Sharing analysis}
long-description = file: README.txt

install_requires = 
pandas
numpy
matplotlib

package_dir=
=src

packages=find:

[options.extras.require]

dev=
black
pytest

[options.packages.find]
where=src
